# Parking_sight

./: .dockerignore  .gitignore  AGENTS.md  README.md  package-lock.json
.replit-artifact/: artifact.toml
backend/: .env.example  Dockerfile.base  Dockerfile.shared  PENDING_WORK.md  alembic.ini  (+7 more)
ml-engineer-3/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
ml-engineer-3/api/: deps.py  main.py  schemas.py
ml-engineer-3/api/routers/: feedback.py  forecast.py  retraining.py  review.py
ml-engineer-3/common/: config.py  db.py  kafka_producer.py  logging.py  models.py  storage.py
ml-engineer-3/common/schemas/: officer_feedback.json
ml-engineer-3/docker/: Dockerfile.training
ml-engineer-3/docs/: CLEANUP.md  DEMO_GUIDE.md  FINAL_AUDIT.md  FINAL_DELIVERABLES.md  FRONTEND_HANDOFF.md  INTEGRATION_PACKAGE.md  JUDGE_QNA.md  SUBMISSION_CHECKLIST.md  TEAM_STATUS.md  TEAM_UPDATE_WHATSAPP.md  feedback_loop.md  hmm_prediction.md  training_pipeline.md
ml-engineer-3/feedback_loop/: consumer.py  review.py  service.py  trigger.py
ml-engineer-3/hmm_prediction/: features.py  infer.py  states.py  train_hmm.py  visualize.py
ml-engineer-3/hmm_prediction/configs/: hmm.yaml
ml-engineer-3/scripts/: demo_feedback.py  demo_hmm.py  init_db.py  seed_demo_data.py  seed_hmm_data.py
ml-engineer-3/tests/: conftest.py  test_feedback_flow.py  test_hmm.py  test_pipeline_logic.py
ml-engineer-3/training/: evaluate.py  ingest.py  pipeline.py  promote.py  registry.py  train.py  validate.py  versioning.py
ml-engineer-3/training/configs/: promotion.yaml  train.yaml
(+127 files in other folders)
