[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common", "training", "feedback_loop", "api", "api.routers", "hmm_prediction"]

[project]
name = "parksight-ml-platform"
version = "0.2.0"
description = "ParkSight ML Engineer 3 platform — retraining, registry, evaluation, drift, HMM"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "boto3>=1.34",          # only used when STORAGE_BACKEND=s3
    "kafka-python>=2.0",    # only used when KAFKA_BOOTSTRAP is set
    "pillow>=10.0",         # demo data seeder
    "fastapi>=0.110",       # feedback-loop API
    "uvicorn>=0.29",        # API server
    "python-multipart>=0.0.9",  # file uploads (evidence)
]

[project.optional-dependencies]
# Heavy ML deps kept separate so CI logic tests stay fast and torch-free.
# ultralytics pinned to the exact version evaluate.py was verified against.
train = ["ultralytics==8.3.0", "torch>=2.2"]
forecast = ["hmmlearn>=0.3", "scikit-learn>=1.3", "matplotlib>=3.7", "joblib>=1.3"]
dev = [
    "pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "black", "isort", "flake8",
    "hmmlearn>=0.3", "scikit-learn>=1.3", "matplotlib>=3.7", "joblib>=1.3",
]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
